<resources>
    <string name="app_name" translatable="false">Tic Tac Nole</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="header" translatable="false">Header</string>
    <string name="footer">Created By: Fantastic 0100</string>
    <string name="welcome">Welcome!</string>
    <string name="box">Box</string>
    <string name="hvc">1 Player</string>
    <string name="hvh">2 Player</string>
    <string name="scan" translatable="false">Bluetooth</string>
    <string name="icons" translatable="false">Icons</string>
    <string name="turn1">Player 1 (X)</string>
    <string name="turn2">Player 2 (O)</string>
    <string name="newGame">New Game</string>
    <string name="win1">Player 1 Wins!</string>
    <string name="win2">Player 2 Wins!</string>
    <string name="win3">Tie Game.</string>
    <string name="win4">You Win!</string>
    <string name="computerWin">The Computer Wins.</string>


    <string-array name="iconOptions">
        <item>Player 1: X</item>
        <item>FSU</item>
        <item>UF</item>
        <item>USF</item>
        <item>UCF</item>
        <item>FAMU</item>
        <item>FAU</item>
        <item>Player 2: O</item>
        <item>FSU</item>
        <item>UF</item>
        <item>USF</item>
        <item>UCF</item>
        <item>FAMU</item>
        <item>FAU</item>
    </string-array>
</resources>
