<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#540115"
    android:id="@+id/">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:id="@+id/header"
        android:src="@drawable/header"
        android:contentDescription="@string/header"
        android:scaleType="fitStart" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/header"
        android:weightSum="3"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b1"
                android:src="@drawable/gold"
                android:layout_weight="1"
                android:contentDescription="@string/box"
                android:onClick="makeMove"
                android:scaleType="fitXY" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b2"
                android:src="@drawable/gold"
                android:layout_weight="1"
                android:contentDescription="@string/box"
                android:onClick="makeMove"
                android:scaleType="fitXY" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b3"
                android:src="@drawable/gold"
                android:layout_weight="1"
                android:contentDescription="@string/box"
                android:onClick="makeMove"
                android:scaleType="fitXY" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b4"
                android:src="@drawable/gold"
                android:layout_weight="1"
                android:contentDescription="@string/box"
                android:onClick="makeMove"
                android:scaleType="fitXY" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b5"
                android:src="@drawable/gold"
                android:layout_weight="1"
                android:contentDescription="@string/box"
                android:onClick="makeMove"
                android:scaleType="fitXY" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b6"
                android:src="@drawable/gold"
                android:layout_weight="1"
                android:contentDescription="@string/box"
                android:onClick="makeMove"
                android:scaleType="fitXY" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b7"
                android:src="@drawable/gold"
                android:layout_weight="1"
                android:contentDescription="@string/box"
                android:onClick="makeMove"
                android:scaleType="fitXY" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b8"
                android:src="@drawable/gold"
                android:layout_weight="1"
                android:contentDescription="@string/box"
                android:onClick="makeMove"
                android:scaleType="fitXY" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/b9"
                android:src="@drawable/gold"
                android:layout_weight="1"
                android:contentDescription="@string/box"
                android:onClick="makeMove"
                android:scaleType="fitXY" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/options"
        android:gravity="center_horizontal"
        android:id="@+id/hi">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hvc"
            android:id="@+id/button1"
            android:textColor="#540115"
            android:onClick="buttonClick"
            android:layout_marginRight="10dp"
            android:background="#cdc092" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hvh"
            android:id="@+id/button2"
            android:textColor="#540115"
            android:onClick="buttonClick"
            android:layout_marginBottom="10dp"
            android:background="#cdc092" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bluetooth"
        android:gravity="center_horizontal"
        android:id="@+id/options">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon1"
            android:id="@+id/icon1"
            android:textColor="#540115"
            android:onClick="iconClick"
            android:background="#cdc092"
            android:layout_marginRight="10dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon2"
            android:id="@+id/icon2"
            android:textColor="#540115"
            android:onClick="iconClick"
            android:background="#cdc092" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:id="@+id/bluetooth"
        android:layout_above="@+id/footer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#540115"
        android:onClick="connect"
        android:background="#cdc092" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/footer"
        android:id="@+id/footer"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textColor="#cdc092"
        />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bluetoothlist"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#ff540115"
        android:visibility="gone" />
</RelativeLayout>